footer fix, quiz page update, button standardization

--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -30,7 +30,7 @@
                 <li>Don't accept files or send files to strangers</li>
                 <li>If you feel uncomfortable; tell a trusted adult.</li>
             </ul>
-            <a href="#" style="margin-left:95px;margin-bottom:10px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
+            <a href="#" style="margin-left:95px;margin-bottom:10px;" class="btn btn-info bt-md ">Check out the Article!</a></ br></ br>
             </div>
         
         <div class="col-md-8">
@@ -82,7 +82,7 @@
                 
                 
             </ul>
-            <a href="#" style="margin-left:95px;" class="btn btn-danger bt-md">Check out the Article!</a>
+            <a href="#" style="margin-left:95px;" class="btn btn-info bt-md">Check out the Article!</a>
             <br /><br />
         </div>
     </div>
