--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -5,49 +5,50 @@
 <h1 style="padding-left:12%;">Human Trafficking & Cyber Security Project</h1>
 <br />
 
-<div class="container">
-    <div class="col-md-9 panel panel-default">
+<body>
+    <div class="container">
+        <div class="col-md-9 panel panel-default">
 
-        <div style="text-align: center;">
+            <div style="text-align: center;">
 
-            <!-- Made the ferris image responsive to scaling *Caleb*-->
+                <!-- Made the ferris image responsive to scaling *Caleb*-->
 
-    
-            <img src="~/Content/Images/TCS_Solutions.png" g" style="height: 350px; width:100%;" class="img-responsive" />
+
+                <img src="~/Content/Images/TCS_Solutions.png" g" style="height: 350px; width:100%;" class="img-responsive" />
+            </div>
+            <br />
+            <div>
+                Trafficking is a new form of slavery and is prevalent in every state in the country. The victims of human trafficking are usually young girls or women. The end result of these activities perpetrated on these individuals is horrible. This website is designed to give escape to the poor unfortunate victims of these criminals.  This website will also educate everyone from parents to youth in prevention of these crimes for all future generations.
+                <br />
+                <br />
+                The group of people working on this website come from the Hospitality, Social Work, and Computer Information Systems programs of Ferris State University. Countless hours have been spent researching and developing this website. Social Work was a major contributor in supplying the research for the website. Hospitality was instrumental in promoting and advertising the final product of the website. Computer Information Systems designed the graphics, website, and all programming involved in the production of this website. Special Thanks to Dr.Herrington, Professor Hazelton, Professor Post, and Professor Kiio without whom this website could never have come to fruition.
+                <br />
+                <br />
+
+            </div>
+            <br />
         </div>
         <br />
-        <div>
-            Trafficking is a new form of slavery and is prevalent in every state in the country. The victims of human trafficking are usually young girls or women. The end result of these activities perpetrated on these individuals is horrible. This website is designed to give escape to the poor unfortunate victims of these criminals.  This website will also educate everyone from parents to youth in prevention of these crimes for all future generations. 
-            <br />
-            <br />
-            The group of people working on this website come from the Hospitality, Social Work, and Computer Information Systems programs of Ferris State University. Countless hours have been spent researching and developing this website. Social Work was a major contributor in supplying the research for the website. Hospitality was instrumental in promoting and advertising the final product of the website. Computer Information Systems designed the graphics, website, and all programming involved in the production of this website. Special Thanks to Dr.Herrington, Professor Hazelton, Professor Post, and Professor Kiio without whom this website could never have come to fruition.
-            <br />
-            <br />
-        
-        </div>
-        <br />
-    </div>
-    <br />
-    <div style="text-align: center;" class="team-clean col-md-3 ">
-        <div class="container">
+        <div style="text-align: center;" class="team-clean col-md-3 ">
+            <div class="container">
 
-            <!-- Added Scalability to this photo as well *Caleb*-->
-            <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" style="width: 100%;" class="img-responsive" />
-            <br /><br />
-            <!-- Changed from list to paragraph with breaks for looks, styled a bit, and added some buttons to department sites *Caleb* -->
-            <p class="panel panel-default">
-                <strong><em>Social Work Department</em></strong><br /><br /><a class="btn btn-info" href="http://www.ferris.edu/socialwork/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
-            </p>
-            <p class="panel panel-default">
-                <strong><em>Computer Information Systems Department</em></strong><br /><br /><a class="btn btn-warning" href="http://www.ferris.edu/bachelor-degree-computer-information-systems-cis-degree.htm">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
-            </p>
-            <p class="panel panel-default">
-                <strong><em>Hospitality Management Department</em></strong><br /><br /><a class="btn btn-danger" href="http://www.ferris.edu/business/program/hospitality/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
-            </p>
-            <p class="panel panel-default">
-                <strong><em>Accountancy/Computer Information Systems Department</em></strong><br /><br /><a class="btn btn-success" href="http://ferris.edu/business/program/accountancy/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a>
-            </p>
+                <!-- Added Scalability to this photo as well *Caleb*-->
+                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" style="width: 100%;" class="img-responsive" />
+                <br /><br />
+                <!-- Changed from list to paragraph with breaks for looks, styled a bit, and added some buttons to department sites *Caleb* -->
+                <p class="panel panel-default">
+                    <strong><em>Social Work Department</em></strong><br /><br /><a class="btn btn-info" href="http://www.ferris.edu/socialwork/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
+                </p>
+                <p class="panel panel-default">
+                    <strong><em>Computer Information Systems Department</em></strong><br /><br /><a class="btn btn-info" href="http://www.ferris.edu/bachelor-degree-computer-information-systems-cis-degree.htm">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
+                </p>
+                <p class="panel panel-default">
+                    <strong><em>Hospitality Management Department</em></strong><br /><br /><a class="btn btn-info" href="http://www.ferris.edu/business/program/hospitality/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a><br /><br /><br />
+                </p>
+                <p class="panel panel-default">
+                    <strong><em>Accountancy/Computer Information Systems Department</em></strong><br /><br /><a class="btn btn-info" href="http://ferris.edu/business/program/accountancy/">More Info <span class="glyphicon glyphicon-thumbs-up"></span></a>
+                </p>
+            </div>
         </div>
     </div>
-</div>
-
+</body>
