--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
+    height:100%;
 	display: block;
-	height: 100%;
+	min-height: 100%;
 	padding-bottom: 0;
 	padding-top: 0;
 	margin-bottom: 0;
@@ -9,7 +10,10 @@
 	margin: auto;
 	background-color: #ecf0f5;
 }
-
+html{
+    height:100%;
+    min-height:100%;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
 	padding-left: 15px;
@@ -48,13 +52,17 @@ textarea {
 /* footer Css */
 
 footer {
-	display: block;
-	position: relative;
-	bottom: 0;
-	width: 100%;
-	min-height: 180px; /* Height of the footer */
-	padding-top: 10px;
-	background-color: #282d32;
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    display: block;
+    width: 100%;
+    min-height: 180px; /* Height of the footer */
+    padding-top: 10px;
+    background-color: #282d32;
+    margin-bottom: -10px;
 }
 
 .body-content {
