buttons all blue doe

--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
             <div class="carousel-caption">
          
                 <p id="carousel_btn"  >
-                 <a href= "http://praesidium-beta.azurewebsites.net/Trafficking"  class= "btn btn-danger btn-group-lg">Read More</a></p>
+                 <a href= "http://praesidium-beta.azurewebsites.net/Trafficking"  class= "btn btn-info btn-group-lg">Read More</a></p>
             </div>
         </div>
         <div class="item">
@@ -29,7 +29,7 @@
             <img src="~/Content/Images/Cyber Final.png"  id="carousel_img" />
             <div class="carousel-caption">
     
-                <p id="carousel_btn"><a href="http://praesidium-beta.azurewebsites.net/CyberSecurity " class="btn btn-primary btn-group-lg">Read More</a></p>
+                <p id="carousel_btn"><a href="http://praesidium-beta.azurewebsites.net/CyberSecurity " class="btn btn-info btn-group-lg">Read More</a></p>
             </div>
         </div>
         <div class="item">
@@ -38,7 +38,7 @@
             <img src="~/Content/Images/Life is about finding people who are your kind of crazy! (5).png"  id="carousel_img" />
             <div class="carousel-caption">
                 
-                <p id="carousel_btn"><a href="http://praesidium-beta.azurewebsites.net/Home/About " class="btn btn-success btn-group-lg">Read More</a></p>
+                <p id="carousel_btn"><a href="http://praesidium-beta.azurewebsites.net/Home/About " class="btn btn-info btn-group-lg">Read More</a></p>
             </div>
         </div>
     </div>
@@ -57,6 +57,7 @@
     <div class="col-md-6">
      
         <h2 style="text-align: center;">Recent News</h2>
+
         <ul class="align-left">
             <li>Human Trafficking Confrence April 5th and 6th at University Center.</li>
             <li>"Warning Lights" to bring awareness to human trafficking. More Info <A HREF="http://ferris.edu/business/news/warning-lights-for-human-trafficking/">Here</A></li>
@@ -66,6 +67,7 @@
     </div>
     <div class="col-md-6">
         <h2 style="text-align: center;">Recently Added Articles</h2>
+    
         <ul class="align-left">
             <li>Oversharing: Whats so bad about it. Read more <A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Teen">Here</A></li>
             <li>Sammy & Facebook: The dangers of simple things. Read more <A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Youth">Here</A></li>
@@ -78,6 +80,7 @@
 <div class="row"  id="borders">
     <div class="col-md-6" >
         <h2 style="text-align: center;">Government Resources</h2>
+    
         <ul class="align-left">
             <li><A HREF="https://www.state.gov/j/tip/rls/tiprpt/2013/index.htm">Trafficking in Persons Report 2013</A></li>
             <li><A HREF="https://www.dhs.gov/blue-campaign/what-human-trafficking">What is Human Trafficking - DHS</A></li>
@@ -89,6 +92,7 @@
 </div>
     <div class="col-md-6" >
         <h2 style="text-align: center;" >General Resources</h2>
+       
         <ul class="align-left">
             <li><A HREF="https://polarisproject.org">Polaris Project Site</A></li>
             <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline Site</A></li>
