--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -294,8 +294,16 @@ figure.effect-caged:hover p {
   
 	
 }
+.carousel-indicators li {
+   visibility:hidden;
 
-#carousel_img{
+}
+.carousel-indicators .active {
+    background-color: white;
+
+}
+
+ #carousel_img{
 
    border-radius: 22px 22px 22px 22px;
    overflow: hidden;
