front page edits

--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -57,20 +57,20 @@
     <div class="col-md-6">
      
         <h2 style="text-align: center;">Recent News</h2>
-        <ul class="align-left">
-            <li>Human Trafficking Confrence April 5th and 6th at University Center.</li>
-            <li>"Warning Lights" to bring awareness to human trafficking. More Info <A HREF="http://ferris.edu/business/news/warning-lights-for-human-trafficking/">Here</A></li>
-            <li>Human trafficking growing problem in Atlanta. More Info <A HREF="http://www.fox5atlanta.com/news/241695965-story">Here</A></li>
-            <li>Task force cracks down on child exploitation in Atlantic City. More Info <A HREF="http://philadelphia.cbslocal.com/2017/03/10/local-child-predator-task-force-working-hard-to-fight-human-trafficking-in-area/">Here</A> </li>
+        <ul class="align-left leaders">
+            <li><span>Human Trafficking Confrence April 5th and 6th at University Center.</span><span><a href="http://promotemichigan.com/ferris-state-university-announces-conference-human-trafficking-awareness-april-5-6" class="btn btn-info btn-xs">View Link</a></span></li>
+            <li><span>"Warning Lights" to bring awareness to human trafficking.</span><span><A HREF="http://ferris.edu/business/news/warning-lights-for-human-trafficking/" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Human trafficking growing problem in Atlanta.</span><span><A HREF="http://www.fox5atlanta.com/news/241695965-story" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Task force cracks down on child exploitation in Atlantic City.</span><span><A HREF="http://philadelphia.cbslocal.com/2017/03/10/local-child-predator-task-force-working-hard-to-fight-human-trafficking-in-area/" class="btn btn-info btn-xs">View Link</A></span></li>
         </ul>
     </div>
     <div class="col-md-6">
         <h2 style="text-align: center;">Recently Added Articles</h2>
-        <ul class="align-left">
-            <li>Oversharing: Whats so bad about it. Read more <A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Teen">Here</A></li>
-            <li>Sammy & Facebook: The dangers of simple things. Read more <A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Youth">Here</A></li>
-            <li>Cyberbullying: The hidden problem. Read more <A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Adults">Here</A></li>
-            <li>Teachers: Helping your students be safe online. Read more <A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Teachers">Here</A></li>
+        <ul class="align-left leaders">
+            <li><span>Oversharing: Whats so bad about it.</span><span><A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Teen" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Sammy & Facebook: The dangers of simple things.</span><span><A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Youth" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Cyberbullying: The hidden problem.</span><span><A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Adults" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Teachers: Helping your students be safe online.</span><span><A HREF="http://praesidium-beta.azurewebsites.net/CyberSecurity/Teachers" class="btn btn-info btn-xs">View Link</A></span></li>
         </ul>
     </div>
 </div>
@@ -78,22 +78,22 @@
 <div class="row"  id="borders">
     <div class="col-md-6" >
         <h2 style="text-align: center;">Government Resources</h2>
-        <ul class="align-left">
-            <li><A HREF="https://www.state.gov/j/tip/rls/tiprpt/2013/index.htm">Trafficking in Persons Report 2013</A></li>
-            <li><A HREF="https://www.dhs.gov/blue-campaign/what-human-trafficking">What is Human Trafficking - DHS</A></li>
-            <li><A HREF="https://leb.fbi.gov/2011/march/human-sex-trafficking">FBI Bulletin on Human Sex Trafficking</A></li>
-            <li><A HREF="https://www.ovc.gov/pubs/FederalHumanTraffickingStrategicPlan.pdf">Federal Human Trafficking Strategic Plan</A> </li>
-            <li><A HREF="https://www.acf.hhs.gov/otip">Office on trafficking in persons hompage</A></li>
+        <ul class="align-left leaders">
+            <li><span>Trafficking in Persons Report 2013</span><span><A HREF="https://www.state.gov/j/tip/rls/tiprpt/2013/index.htm" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>What is Human Trafficking - DHS</span><span><A HREF="https://www.dhs.gov/blue-campaign/what-human-trafficking" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>FBI Bulletin on Human Sex Trafficking</span><span><A HREF="https://leb.fbi.gov/2011/march/human-sex-trafficking" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Federal Human Trafficking Strategic Plan</span><span><A HREF="https://www.ovc.gov/pubs/FederalHumanTraffickingStrategicPlan.pdf" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Office on trafficking in persons hompage</span><span><A HREF="https://www.acf.hhs.gov/otip" class="btn btn-info btn-xs">View Link</A></span></li>
 
 </ul>
 </div>
     <div class="col-md-6" >
         <h2 style="text-align: center;" >General Resources</h2>
-        <ul class="align-left">
-            <li><A HREF="https://polarisproject.org">Polaris Project Site</A></li>
-            <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline Site</A></li>
-            <li><A HREF="http://www.missingkids.com/home">Missing Kids Sit</A></li>
-            <li><A HREF="http://www.micatholic.org/advocacy/focus-essay/2014/focus-20140201-HumanTrafficking.pdf">Essay on Human Trafficking</A> </li>
+        <ul class="align-left leaders">
+            <li><span>Polaris Project Site</span><span><A HREF="https://polarisproject.org" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Human Trafficking Hotline Site</span><span><A HREF="https://humantraffickinghotline.org" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Missing Kids Site</span><span><A HREF="http://www.missingkids.com/home" class="btn btn-info btn-xs">View Link</A></span></li>
+            <li><span>Essay on Human Trafficking</span><span><A HREF="http://www.micatholic.org/advocacy/focus-essay/2014/focus-20140201-HumanTrafficking.pdf" class="btn btn-info btn-xs">View Link</A></span></li>
             
 
         </ul>
