--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -209,10 +209,11 @@ figure.effect-caged figcaption::before {
 	width: 100%;
 	height: 100%;
 	content: '';
-	transform: translate3d(0,50%,0);
+
 }
 
 .photo_cont{
+    margin-top:10px;
 box-shadow:1px 1px 4px rgba(0,0,0,0.8);
 padding-top:10px;
 }
@@ -222,8 +223,6 @@ figure.effect-caged h1 {
 	left: 0;
 	width: 100%;
 	color: white;
-	transition: transform 0.35s, color 0.35s;
-	transform: translate3d(0,-50%,0);
 	text-align:center;
 	text-shadow: black 0.1em 0.1em 0.2em;
 }
@@ -231,7 +230,6 @@ figure.effect-caged h1 {
 figure.effect-caged figcaption::before,
 figure.effect-caged p {
 	width: 100%;
-	transition: opacity 0.35s, transform 0.35s;
 	text-align:center;
   
 }
@@ -243,7 +241,6 @@ figure.effect-caged p {
 	padding: 2em;
 	width: 100%;
 	opacity: 0;
-	transform: translate3d(0,10px,0);
 	text-align:center;
 	color: white;
 	text-shadow: black 0.1em 0.1em 0.2em;
@@ -251,7 +248,6 @@ figure.effect-caged p {
 
 figure.effect-caged:hover h1 {
 
-	transform: translate3d(0,-50%,0) translate3d(0,-40px,0);
 	text-align:center;
 	font-weight:bold;
 	text-shadow: black 0.1em 0.1em 0.2em;
@@ -261,7 +257,7 @@ figure.effect-caged:hover h1 {
 figure.effect-caged:hover figcaption::before ,
 figure.effect-caged:hover p {
 	opacity: 1;
-	transform: translate3d(0,0,0);
+
   
 }
 
@@ -373,11 +369,57 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
 	background-color: #3c8dbc;
 	position:relative;
 }
+.dropdown_btn {
+    background-color: #3c8dbc !important;
+
+}
+.dropdown > a:hover {
+    background-color: rgba(0,60,128,0.82) !important;
+    color: #333;
+    height: 50px;
+    position: relative;
+}
+
+.dropdown-menu {
+    background-color: #3c8dbc;
+    border: none;
+}
+
+    .dropdown-menu:before {
+        visibility: hidden;
+    }
+
+    .dropdown-menu> li :hover {
+        background-color: rgba(0,60,128,0.82) !important;
+    }
+        .dropdown-menu > li > a {
+        font-weight: bold !important;
+        color: #fff;
+        background-color: #3c8dbc;
+    }
 
 
+.dropdown :after {
+    background-color: rgba(0,60,128,0.82) !important;
+}
 
-/* Nav item list */
+.dropdown-menu > li :hover {
+    position: relative;
+}
 
+}
+
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+    border-top-color: rgba(0,60,128,0.82);
+    border-bottom-color: rgba(0,60,128,0.82);
+}
+
+
+    /* Nav item list */
+
+    .navbar-nav > li > dropdown > a {
+    background-color: rgba(0,60,128,0.82) !important;
+}
 
 .navbar-nav > li > a :active{ 
  background-color: rgba(0,60,128,0.82) !important;
