--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -9,7 +9,7 @@
 <!-- Creates for all panels -->
 <div class="row">
     <!-- Left Side of Page -->
-    <div class="panel col-md-4">
+    <div class="col-md-4">
 
         <!-- Quick Facts section, created as a panel -->
 
@@ -46,7 +46,7 @@
 
     <!-- Center of Page-->
     <!-- Everything is on one panel -->
-    <div class="panel col-md-5">
+    <div class=" col-md-5">
 
         <!-- Panel Body -->
         <div class="panel-body" id="borders">
