--- a/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
@@ -20,6 +20,9 @@
             be safe online. There are some major no-nos that you can avoid by following a few safety rules while using the computer. These rules along with some quick safety tips
             can help make sure you and your friends stay safe.
         </p>
+        @Html.ActionLink("Youth Quiz", "Quiz", new { quizId = 1 }, new { @class = "btn btn-info", @title = "" })
+
+        
 
     </div>
     <div class="col-md-4 align-center " id="borders" style="min-height:150px;">
