--- a/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teen.cshtml
@@ -22,11 +22,12 @@
           @Html.ActionLink("Teen Quiz", "Quiz", new { quizId = 2 }, new { @class = "btn btn-info", @title = "" })        
  </div>
     <div class="col-md-4 align-center " id="borders" style="min-height:150px;">
-        <h3 id="headers_borders">Teen Page Links</h3>
+        <h3 id="headers_borders">Teen Page Resources</h3>
         <ul class="align-left" id="p_textborders">
             <li><A HREF="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report</A></li>
             <li><A HREF="http://www.innocentsatrisk.org">Innocents at Risk</A></li>
             <li><A HREF="https://humantraffickinghotline.org">Human Trafficking Hotline</A></li>
+            <center>@Html.ActionLink("Teen Quiz", "Quiz", new { quizId = 2 }, new { @class = "btn btn-info", @title = "" })  </center>
         </ul>
     </div>
 </div>
