--- a/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
@@ -11,7 +11,7 @@
             and their main way of doing this is by doing talks in schools and at kids clubs. They also provide resources like websites, fourms and other informational 
             resources for parents and children alike.
         </p>
-        @Html.ActionLink("Law Enforcement Quiz", "Quiz", new { quizId = 3 }, new { @class = "btn btn-info", @title = "" })
+      
         
     </div>
 </div>
@@ -23,6 +23,7 @@
             <li><a href="http://www.mass.gov/anf/research-and-tech/cyber-security/cyber-security-laws/federal-cyber-security-laws.html">Federal Cyber Security Laws</a></li>
             <li><a href="http://www.cox.com/wcm/en/aboutus/datasheet/takecharge/2009-teen-survey.pdf">COX Communications Report on Teen Online Saftey</a></li>
             <li><a href="https://polarisproject.org/">Polaris Project Website.</a></li>
+            <center>@Html.ActionLink("Law Enforcement Quiz", "Quiz", new { quizId = 3 }, new { @class = "btn btn-info", @title = "" })  </center>
           
             
         </ul>
