--- a/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
@@ -20,7 +20,7 @@
             be safe online. There are some major no-nos that you can avoid by following a few safety rules while using the computer. These rules along with some quick safety tips
             can help make sure you and your friends stay safe.
         </p>
-        @Html.ActionLink("Youth Quiz", "Quiz", new { quizId = 1 }, new { @class = "btn btn-info", @title = "" })
+    
 
         
 
@@ -31,6 +31,8 @@
             <li>Always tell your parents about people you don't know trying to talk to you</li>
             <li>Never talk to strangers online</li>
             <li>Only go to websites your parents approve</li>
+           <center>@Html.ActionLink("Youth Quiz", "Quiz", new { quizId = 1 }, new { @class = "btn btn-info", @title = "" })  </center>
+            
         </ul>
     </div>
 </div>
