added controls back to video player

--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="container text-center" style="margin-bottom:3%;">
     <div class="row">
         <div class="col-md-12">
-            <video height="343" poster="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.JPG" style="min-width: 100%;" autoplay="autoplay"><source src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.mp4" /><br /><track kind="captions" label="Closed Caption" src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.en.srt" srclang="en" type="text/plain" /></video>
+            <video height="343" controls poster="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.JPG" style="min-width: 100%;" autoplay="autoplay"><source src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.mp4" /><br /><track kind="captions" label="Closed Caption" src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.en.srt" srclang="en" type="text/plain" /></video>
         </div>
 
     </div>
