--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -1,95 +1,103 @@
 ﻿body {
-    display: block;
-    height: 100%;
-    padding-bottom: 0;
-    padding-top: 0;
-    margin-bottom: 0;
-    width: 100%;
-    max-width: 100% !important;
-    margin: auto;
-    background-color: #ecf0f5;
+    height:100%;
+	display: block;
+	min-height: 100%;
+	padding-bottom: 0;
+	padding-top: 0;
+	margin-bottom: 0;
+	width: 100%;
+	max-width: 100% !important;
+	margin: auto;
+	background-color: #ecf0f5;
 }
-
+html{
+    height:100%;
+    min-height:100%;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
 .dl-horizontal dt {
-    white-space: normal;
+	white-space: normal;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
-    max-width: 280px;
+	max-width: 280px;
 }
 
 /* exit button CSS */
 
 #get-away {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    height: 100px;
-    width: 150px;
-    background-color: indianred;
-    color: black;
-    font-size: 25px;
-    border: 0px;
-    border-radius: 5px;
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	height: 100px;
+	width: 150px;
+	background-color: indianred;
+	color: black;
+	font-size: 25px;
+	border: 0;
+	border-radius: 5px;
 }
 
 /* footer Css */
 
 footer {
-    display: block;
     position: relative;
+    right: 0;
     bottom: 0;
+    left: 0;
+    padding: 1rem;
+    display: block;
     width: 100%;
     min-height: 180px; /* Height of the footer */
     padding-top: 10px;
     background-color: #282d32;
+    margin-bottom: -10px;
 }
 
 .body-content {
-    min-height: calc(100vh - 288px);
-    padding-top: 160px !important;
+	min-height: calc(100vh - 288px);
+	padding-top: 160px !important;
 }
 
 /* Search bar CSS */
 
 .searchAreasm {
-    padding-left:5px;
-    padding-bottom:5px;
-    padding-right:5px;
+	padding-left:5px;
+	padding-bottom:5px;
+	padding-right:5px;
 }
 
 /*@media (min-width: 1200px) {
-    .container {
-        padding-top: 6px;
-    }
+	.container {
+		padding-top: 6px;
+	}
 }*/
 
 /* white space css */
 .whitespace {
-    background-color: #ecf0f5;
-    height: 90px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 20;
+	background-color: #ecf0f5;
+	height: 90px;
+	position: fixed;
+	width: 100%;
+	top: 0;
+	z-index: 20;
 }
 
 /* contributer? */
 
 .Contributer {
-    text-align: left;
+	text-align: left;
 }
 
   
@@ -99,96 +107,96 @@ footer {
    color: #f4511e;
    font-size: 200px;
    padding-left: 15%;
-       }
+	   }
 
   .logo-table {
-      color: #f4511e;
-      font-size: 50px;
+	  color: #f4511e;
+	  font-size: 50px;
   }
 
  .center-block {
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .input-group .icon-addon .form-control {
-    border-radius: 0;
+	border-radius: 0;
 }
 
 .icon-addon {
-    position: relative;
-    color: #555;
-    display: block;
+	position: relative;
+	color: #555;
+	display: block;
 }
 
 .icon-addon:after,
 .icon-addon:before {
-    display: table;
-    content: " ";
+	display: table;
+	content: " ";
 }
 
 .icon-addon:after {
-    clear: both;
+	clear: both;
 }
 
 .icon-addon.addon-md .glyphicon,
 .icon-addon .glyphicon, 
 .icon-addon.addon-md .fa,
 .icon-addon .fa {
-    position: absolute;
-    z-index: 2;
-    left: 10px;
-    font-size: 14px;
-    width: 20px;
-    margin-left: -2.5px;
-    text-align: center;
-    padding: 10px 0;
-    top: 1px
+	position: absolute;
+	z-index: 2;
+	left: 10px;
+	font-size: 14px;
+	width: 20px;
+	margin-left: -2.5px;
+	text-align: center;
+	padding: 10px 0;
+	top: 1px
 }
 
 .icon-addon.addon-lg .form-control {
-    line-height: 1.33;
-    height: 46px;
-    font-size: 18px;
-    padding: 10px 16px 10px 40px;
+	line-height: 1.33;
+	height: 46px;
+	font-size: 18px;
+	padding: 10px 16px 10px 40px;
 }
 
 .icon-addon.addon-sm .form-control {
-    height: 30px;
-    padding: 5px 10px 5px 28px;
-    font-size: 12px;
-    line-height: 1.5;
+	height: 30px;
+	padding: 5px 10px 5px 28px;
+	font-size: 12px;
+	line-height: 1.5;
 }
 
 .icon-addon.addon-lg .fa,
 .icon-addon.addon-lg .glyphicon {
-    font-size: 18px;
-    margin-left: 0;
-    left: 11px;
-    top: 4px;
+	font-size: 18px;
+	margin-left: 0;
+	left: 11px;
+	top: 4px;
 }
 
 .icon-addon.addon-md .form-control,
 .icon-addon .form-control {
-    padding-left: 30px;
-    float: left;
-    font-weight: normal;
+	padding-left: 30px;
+	float: left;
+	font-weight: normal;
 }
 
 .icon-addon.addon-sm .fa,
 .icon-addon.addon-sm .glyphicon {
-    margin-left: 0;
-    font-size: 12px;
-    left: 5px;
-    top: -1px
+	margin-left: 0;
+	font-size: 12px;
+	left: 5px;
+	top: -1px
 }
 
 .icon-addon .form-control:focus + .glyphicon,
 .icon-addon:hover .glyphicon,
 .icon-addon .form-control:focus + .fa,
 .icon-addon:hover .fa {
-    color: #2580db;
+	color: #2580db;
 }
 
 
@@ -201,10 +209,11 @@ figure.effect-caged figcaption::before {
 	width: 100%;
 	height: 100%;
 	content: '';
-	transform: translate3d(0,50%,0);
+
 }
 
 .photo_cont{
+    margin-top:10px;
 box-shadow:1px 1px 4px rgba(0,0,0,0.8);
 padding-top:10px;
 }
@@ -214,17 +223,14 @@ figure.effect-caged h1 {
 	left: 0;
 	width: 100%;
 	color: white;
-	transition: transform 0.35s, color 0.35s;
-	transform: translate3d(0,-50%,0);
-    text-align:center;
-    text-shadow: black 0.1em 0.1em 0.2em;
+	text-align:center;
+	text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 figure.effect-caged figcaption::before,
 figure.effect-caged p {
-    width: 100%;
-	transition: opacity 0.35s, transform 0.35s;
-    text-align:center;
+	width: 100%;
+	text-align:center;
   
 }
 
@@ -235,44 +241,42 @@ figure.effect-caged p {
 	padding: 2em;
 	width: 100%;
 	opacity: 0;
-	transform: translate3d(0,10px,0);
-    text-align:center;
-    color: white;
-    text-shadow: black 0.1em 0.1em 0.2em;
+	text-align:center;
+	color: white;
+	text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 figure.effect-caged:hover h1 {
 
-	transform: translate3d(0,-50%,0) translate3d(0,-40px,0);
-    text-align:center;
-    font-weight:bold;
-    text-shadow: black 0.1em 0.1em 0.2em;
-    font-size:40px;
+	text-align:center;
+	font-weight:bold;
+	text-shadow: black 0.1em 0.1em 0.2em;
+	font-size:40px;
 }
 
 figure.effect-caged:hover figcaption::before ,
 figure.effect-caged:hover p {
 	opacity: 1;
-	transform: translate3d(0,0,0);
+
   
 }
 
 /* CSS for jumbotrons */
 
  #Contact_jumbo{
-    box-shadow:1px 1px 4px rgba(0,0,0,0.5);
-    background-size: cover;
-    background-position:right top;
-    background-image: url(http://kidsbizmasters.com/wp-content/uploads/2014/02/telephone.jpg); 
-    position: relative;
-    height: 100%;
-    
+	box-shadow:1px 1px 4px rgba(0,0,0,0.5);
+	background-size: cover;
+	background-position:right top;
+	background-image: url(http://kidsbizmasters.com/wp-content/uploads/2014/02/telephone.jpg); 
+	position: relative;
+	height: 100%;
+	
    
 }
 .jumbotron .btn{
-    border-radius:0px!important;
-    box-shadow:1px 1px 4px rgba(0,0,0,0.4);
-    padding:10px 40px;
+	border-radius:0 !important;
+	box-shadow:1px 1px 4px rgba(0,0,0,0.4);
+	padding:10px 40px;
 }
 
 /* carousel CSS*/
@@ -283,17 +287,24 @@ figure.effect-caged:hover p {
    width:100%;
    overflow: hidden;
    min-height:375px;
-   padding-top:10px;
   
-    
+	
+}
+.carousel-indicators li {
+   visibility:hidden;
+
+}
+.carousel-indicators .active {
+    background-color: white;
+
 }
 
-#carousel_img{
+ #carousel_img{
 
    border-radius: 22px 22px 22px 22px;
    overflow: hidden;
    min-height:375px;
-    width:100%;
+	width:100%;
 
 }
 
@@ -306,8 +317,8 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
 }
 
 #carousel_btn{
-    margin-top:5%;
-    margin-bottom:10%;
+	margin-top:5%;
+	margin-bottom:10%;
 
 }
 
@@ -328,101 +339,116 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
 /*Cyber Security Jumbotron*/
 
 #cyber_sec_jumbo {
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
-    background-size: cover;
-    background-image: url();
-    background-image: url('Images/CyberSecurityHome.jpg');
-    position: relative;
-    height: 300px;
-    color: white;
-    text-shadow: black 0.1em 0.1em 0.2em;
+	box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
+	background-size: cover;
+	background-image: url();
+	background-image: url('Images/CyberSecurityHome.jpg');
+	position: relative;
+	height: 300px;
+	color: white;
+	text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 /* container CSS*/
 
 #borders {
-    border: 2px solid #333333;
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
-    border-radius: 10px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    background-color: #073e5f;
-    color: white;
-    text-shadow: #333333 0.1em 0.1em 0.2em;
+	border: 2px solid #333333;
+	box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
+	border-radius: 10px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	background-color: #073e5f;
+	color: white;
+	text-shadow: #333333 0.1em 0.1em 0.2em;
 }
 
 
 /* Drop down nav items */
 
 .dropdown {
-	background-color: background-color: #3c8dbc;
-	position:relative;
+    background-color: #3c8dbc;
+    position: relative;
+
+}
+
+.dropdown_btn {
+    background-color: #3c8dbc !important;
+
 }
 
 
 
 /* Nav item list */
 
+.navbar-nav > li > a {
+    height: 78px;
+    padding-top: 28px;
+ 
+}
 
 .navbar-nav > li > a :active{ 
  background-color: rgba(0,60,128,0.82) !important;
 }
 
 .navbar-nav > li > a:hover {
-    background-color: rgba(0,60,128,0.82) !important;
-     position: relative;
-     transition: all 1s;
-     color: #fff;
-     z-index: 1;
+	background-color: rgba(0,60,128,0.82) !important;
+	 position: relative;
+	 transition: all 1s;
+	 color: #fff;
+	 z-index: 1;
 }
 
 .navbar-header {
-    margin-top: 0 !important; 
+	margin-top: 0 !important; 
 }
 
 .navbar-brand {
-    width: 170px !important;
-    background-color: #3c8dbc !important;
-    padding-top: 20px;  
+	width: 170px !important;
+	background-color: #3c8dbc !important;
+	padding-top: 20px;  
 }
 .navbar-inverse .navbar-brand {
-        height: 70px;
-        color: #fff;
-        margin-left:-20px;
-    }
+		height: 70px;
+		color: #fff;
+		margin-left:-20px;
+	}
 
-    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-        border-color: #101010;
-        /*padding-top: 15px;*/
-    }
 
-    .navbar-inverse .navbar-nav > li > a {
-        color: #fff;
-    }
+.navbar-collapse {
+    border: none;
+}
+
+.navbar-toggle {
+    margin-bottom: 28px;
+}
+
+	.navbar-inverse .navbar-nav > li > a {
+		color: #fff;
+	}
 
 	.navbar-inverse .navbar-nav > li > a :after {
-        color: #fff;
-    }
+		color: #fff;
+	}
 	
 	.navbar-fixed-top {
-    top: 30px;
+	top: 30px;
 }
 
 .navbar-inverse  {
-    height: 78px !important;
-    background-color: #3c8dbc;
-    border-color: #3c8dbc;
-    width: 100%;
-    margin: auto;
-    font-weight: bold;
+	height: 78px !important;
+	background-color: #3c8dbc;
+	border-color: #3c8dbc;
+	width: 100%;
+	margin: auto;
+	font-weight: bold;
 }
 
 .navbar-nav {
-    background-color: #3c8dbc;
-    border-color: #3c8dbc;
-    /*border-radius: 15px;*/
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+	background-color: #3c8dbc;
+	border-color: #3c8dbc;
+	/*border-radius: 15px;*/
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 /* Text congruency*/
@@ -450,3 +476,89 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
  font-size:14px;
  font-family:Arial;
  }
+
+ ul.share-buttons{
+  list-style: none;
+  padding: 0;
+}
+
+ul.share-buttons li{
+  display: inline;
+}
+
+ul.share-buttons .sr-only {
+  position: absolute;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+
+ul.share-buttons img{
+  width: 32px;
+}
+
+ul.leaders {
+    max-width: 40em;
+    padding: 0;
+    overflow-x: hidden;
+    list-style: square;
+}
+
+    ul.leaders li {
+        min-height: 25px;
+    }
+
+        ul.leaders li:before {
+            float: left;
+            width: 0;
+            white-space: nowrap;
+            content: ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . ";
+        }
+
+    ul.leaders span:first-child {
+        padding-right: 0.33em;
+        background: #073e5f;
+    }
+
+    ul.leaders span + span {
+        float: right;
+        padding-left: 0.33em;
+        background: #073e5f;
+    }
+
+ul.noleaders {
+    max-width: 40em;
+    padding: 0;
+    overflow-x: hidden;
+    list-style: square;
+}
+
+    ul.noleaders li {
+        min-height: 25px;
+    }
+
+        ul.noleaders li:before {
+            float: left;
+            width: 0;
+            white-space: nowrap;
+            content:
+                "                                        "
+                "                                        "
+                "                                        "
+                "                                        ";
+        }
+
+    ul.noleaders span:first-child {
+        padding-right: 0.33em;
+        background: #073e5f;
+    }
+
+    ul.noleaders span + span {
+        float: right;
+        padding-left: 0.33em;
+        background: #073e5f;
+    }
