--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -40,42 +40,41 @@
 
     </div>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" style="margin-top:20px;">
+<div class="navbar navbar-inverse navbar-fixed-top" style="margin-top:20px;">
 
-        <div class="container">
-            <div class="navbar-header" style="margin-top:5px;">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink(" ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <div class="container">
+        <div class="navbar-header" style="margin-top:5px;">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink(" ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
 
-                <a href='@Url.Action("Index", "Home")'><img alt="Widget View" src="@Url.Content("~/Content/Images/TCS_Solutions.png")" style="height: 70px; padding-top: 5px;margin-left:-135px;"></a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav" style="float: right;">
-                    @{
-                        Html.RenderAction("NavigationItems", "Home");
-                    }
-                    <li style="width:150px;">
+            <a href='@Url.Action("Index", "Home")'><img alt="Widget View" src="@Url.Content("~/Content/Images/TCS_Solutions.png")" style="height: 70px; padding-top: 5px;margin-left:-135px;"></a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav" style="float: right;">
+                @{
+                    Html.RenderAction("NavigationItems", "Home");
+                }
+                @*<li style="width:150px;">
                         
-                            <a data-toggle="collapse" href="#searchArea" aria-expanded="false" aria-controls="collapseExample">
-                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                                Search
-                            </a>
+                    <a data-toggle="collapse" href="#searchArea" aria-expanded="false" aria-controls="collapseExample" >
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        Search
+                    </a>
                         
-                        <div class="searchArea accordion-body collapse" id="searchArea">
-                            <input id="txtSearchlg" class="searchBar" type="text" style="width:150px;" placeholder="Keywords.." />
-                        </div>
-                    </li>
+                    <div class="searchArea accordion-body collapse" id="searchArea">
+                        <input id="txtSearchlg" class="searchBar" type="text" style="width:150px;" placeholder="Keywords.." />
+                    </div>
+                </li>*@
 
-                </ul>
-
-
-            </div>
+            </ul>
         </div>
     </div>
+</div>
+
 
     <!-- Warning banner -->
     <div class="container body-content">
@@ -87,15 +86,16 @@
         <div>
             <footer>
 
-                <button id="get-away" style="font-family: 'Agency FB'; color: white" onclick="javascript: getaway();" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-warning-sign"></span><br /> Emergency Exit </button>
+                <button id="get-away" style="font-family: 'Agency FB'; color: white; z-index:1;" onclick="javascript:getaway();" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-warning-sign"></span><br /> Emergency Exit </button>
 
                 <div class="row">
-                    <div class="col-md-1 col-sm-1 col-lg-1"></div>
-                    <div class="col-md-5 item" style="color: white; text-align: center;">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4 item" style="color: white; text-align: center; margin: auto;">
                         <h3>TCS Solutions</h3>
                         <p>We are a devoted group of developers looking to make the world a safer and more informed place for adults and children alike.</p>
                     </div>
-                    <div class="col-md-2 item" style="color: white; text-align: center;">
+                    <div class="col-md-4"></div>
+                    @*<div class="col-md-2 item" style="color: white; text-align: center;">
                         <h3>Services</h3>
                         <ul style="list-style-type: none; padding-right: 35px;">
                             <li><a href="http://praesidium-beta.azurewebsites.net/Trafficking">Trafficking</a></li>
@@ -108,7 +108,7 @@
                             <li><a href="http://praesidium-beta.azurewebsites.net/Home/About">About</a></li>
 
                         </ul>
-                    </div>
+                    </div>*@
                     <br />
 
                 </div>
