--- a/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
+++ b/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
@@ -23,12 +23,12 @@
         <!-- Second Member's Profile -->
         <div class="col-md-4" style="margin-left:100px">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/Alyssa.jpg">
                 <div class="caption text-center">
                     <h4>Alyssa Kozlowski</h4>
                     <h4>Role: Product Owner</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Alyssa">Learn More</div>
-                    <div id="Alyssa" class="collapse">More Info About Alyssa</div>
+                    <div id="Alyssa" class="collapse">Alyssa is 21 years old and started early college when she was 15 years old. She started undergrad as Premed but switched her major to Computer Information Systems.  She will be graduating with a Bachelor’s degree in CIS this spring. She plans on furthering her education with a Master’s or Doctorate. She has been very interest in computers her whole life and Ferris State University has given her a great opportunity to pursue her passion.</div>
                 </div>
             </div>
         </div>
@@ -65,12 +65,12 @@
         <!-- Third Member's Profile -->
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/Blake.png" style="min-height:300px; min-width:175px">
                 <div class="caption text-center">
                     <h4>Blake Budreau</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Blake">Learn More</div>
-                    <div id="Blake" class="collapse">More Info About Blake</div>
+                    <div id="Blake" class="collapse">Blake is a senior at Ferris State University. His major is Computer Information Systems with a minor in Computer Information Technology. He was born and raised in Ludington, MI and came to Big Rapids, to attend FSU, right after graduating high school. After graduating from Ferris State, his goal is to move to the Grand Rapids area to pursue a career in the computer and technology industry where he can use his current knowledge and grow that knowledge to new heights.</div>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
         <!-- First Member's Profile -->
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="~/Content/Images/Caleb.png" style="min-height:325px; min-width:175px">
+                <img src="~/Content/Images/Caleb.png" style="min-height:300px; min-width:175px">
                 <div class="caption text-center">
                     <h4>Caleb Samborski</h4>
                     <h4>Role: Scrum Member</h4>
@@ -128,7 +128,7 @@
                     <h4>Conor Jager</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Conor">Learn More</div>
-                    <div id="Conor" class="collapse">Conor is a graduate from Ferris State University with a Dual Bachelor's degree in Accounting and Computer Information Systems. He is persueing a career as a business analyst, but would like to work other jobs in business and technology along the way. Conor is a Grand Rapids, Michigan native and also loves being active and outside.</div>
+                    <div id="Conor" class="collapse">Conor attends Ferris State University majoring in Accounting and Computer Information Systems. After graduating, he wants to persue a career as a business analyst, but would like to work other jobs in business and technology along the way. Conor is a Grand Rapids, Michigan native and also loves being active and outside.</div>
                 </div>
             </div>
         </div>
