trafficking pages similar to cyber security pages

--- a/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Adults.cshtml
@@ -27,13 +27,22 @@
     <div class="col-xs-12">
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8">
                 <h1 id="headers">Adults</h1>
                 <p class="lead" id="p_text">
                     This page is targeted towards adults to teach them about the dangers of human trafficking and the signs to help recognize when trafficking may be taking place.
                     It is meant to help inform them so that they can take appropriate actions to keep their children, and others, safe.
                 </p>
             </div>
+            <div class="col-md-4 align-center" id="borders" style="min-height: 150px;">
+                <h3 id="headers_borders">Adult Page Links</h3>
+                <ul class="align-left" id="p_textborders">
+                    <li><a href="http://www.google.com">FACTS</a></li>
+                    <li><a href="http://www.google.com">FACTS</a></li>
+                    <li><a href="http://www.google.com">FACTS</a></li>
+                </ul>
+            </div>
+
         </div>
 
     </div>
