--- a/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
@@ -27,7 +27,7 @@
     <div class="col-xs-12">
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8">
                 <h1 id=" headers">Teachers</h1>
                 <p class="lead" id="p_text">
                     Teachers are some of the most influential people on today’s youth. In the early parts of their life, kids spend a majority of their time at
@@ -38,6 +38,15 @@
                     will give content to our educators so that they can learn and pass on the information to their students.
                 </p>
             </div>
+            <div class="col-md-4 align-center " id="borders" style="min-height:150px;">
+                <h3 id="headers_borders">Teacher Page Links</h3>
+                <ul class="align-left" id="p_textborders">
+                    <li><A HREF="http://www.google.com">FACTS</A></li>
+                    <li><A HREF="http://www.google.com">FACTS</A></li>
+                    <li><A HREF="https://www.google.com">FACTS</A></li>
+                </ul>
+            </div>
+
         </div>
     </div>
 </div>
