--- a/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
@@ -25,13 +25,23 @@
     <div class="col-xs-12">
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8">
                 <h1 id="headers">Teens</h1>
                 <p class="lead" id="p_text">
                     Teens are some of the most targeted victims when it comes to trafficking. This page focuses on teaching teens what human trafficking is,
                     the importance of prevention, and ways to protect themselves.
                 </p>
             </div>
+            <div class="col-md-4 align-center " id="borders" style="min-height:150px;">
+                <h3 id="headers_borders">Teen Page Resources</h3>
+                <ul class="align-left" id="p_textborders">
+                    <li><A HREF="http://www.google.com">FACTS</A></li>
+                    <li><A HREF="http://www.google.com">FACTS</A></li>
+                    <li><A HREF="https://www.google.com">FACTS</A></li>
+                   
+                </ul>
+            </div>
+
         </div>
     </div>
 </div>
