Safety exit button

--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -13,19 +13,36 @@
     <script src="~/Scripts/analytics.js"></script>
 
     <script>
-        function getaway() {
-            window.open('http://www.cooking.com');
-            window.open('http://www.facebook.com');
-            window.open('http://www.twitter.com');
-            window.open('http://www.dancing.com');
-            window.open('http://www.ferris.edu');
+        function getaway()
+        {
+            win7 = window.open('http://www.cooking.com');
+            win1 = window.open('http://www.cookingchanneltv.com/');
+            win2 = window.open('http://www.cookingchanneltv.com/profiles');
+            win3 = window.open('http://www.cookingchanneltv.com/videos/players/full-episodes-player');
+                win4 = window.open('http://www.weather.com');
+                win5 = window.open('https://weather.com/weather/today/l/USDC0001:1:US');
+                win6 = window.open('http://www.twitter.com');
 
-            var win = window.open("http://www.weather.com", "_self");
-            win.close();
+
+               
+                win = window.location.replace('http://www.google.com');
+                setTimeout(closewin,1500);
+       
         }
 
+        function closewin()
+        {
+                win1.close();
+                win2.close();
+                win3.close();
+                win4.close();
+                win5.close();
+                win6.close();
+                win7.close();
+                     //win = window.location.replace('http://www.google.com');
+        }
     </script>
-
+   
 </head>
 <body>
     <!-- Div for trafficking hotline-->
