--- a/Praesidium/Praesidium/Views/Shared/_Navigation.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Navigation.cshtml
@@ -1,7 +1,5 @@
 ﻿@model Praesidium.Models.Navigation.NavigationModel
 
-
-
 @if (Model != null)
 {
     if (Model.NavItems != null)
@@ -19,7 +17,7 @@
                         </a>
                         <ul class="dropdown-menu">
 
-                            <li id="dropdown_home"><a href="@Url.Action(navItem.Action, navItem.Controller)">About</a></li>
+                            <li id="dropdown_home">@Html.ActionLink(navItem.DisplayText, navItem.Action, navItem.Controller)</li>
 
                             @foreach (var subNav in navItem.SubPages)
                             {
