--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -115,8 +115,8 @@ gapi.analytics.ready(function() {
 </script>
 
 <div id="embed-api-auth-container"></div>
-<div id="timeline"></div>
-<div id="view-selector-1-container"></div>
-<br />
 <div id="chart-2-container"></div>
-<div id="view-selector-2-container"></div>
+<div id="view-selector-2-container" hidden></div>
+<br />
+<div id="timeline"></div>
+<div id="view-selector-1-container" hidden></div>
