--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -115,8 +115,11 @@ gapi.analytics.ready(function() {
 </script>
 
 <div id="embed-api-auth-container"></div>
+<br />
+<p>Site View's</p>
 <div id="chart-2-container"></div>
 <div id="view-selector-2-container" hidden></div>
 <br />
+<p>Site View's by Country</p>
 <div id="timeline"></div>
 <div id="view-selector-1-container" hidden></div>
