--- a/Praesidium/Praesidium/Views/Login/Login.cshtml
+++ b/Praesidium/Praesidium/Views/Login/Login.cshtml
@@ -1,14 +1,44 @@
-﻿
-@{
-    ViewBag.Title = "Login";
-}
+﻿@using Praesidium.Models
+@model LoginViewModel
+    @{
+        ViewBag.Title = "Log in";
+    }
+    <div class="panel panel-default" style="background-color: #ecf0f5; width: 25%; margin: auto; border: 1px solid #858383; box-shadow: 10px 10px 5px #888888; min-width: 425px;">
+        <div class="row">
+            <div class="">
+                <section id="loginForm" style="padding-top: 10px; padding-left:50px;">
+                    @using (Html.BeginForm("LoginValidation", "Login", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                        @Html.AntiForgeryToken()
 
-<h2>Login</h2>
-@using (Html.BeginForm())
-{
-    <div>@Html.Label("Login Name")</div>
-    <div>@Html.TextBox("Name")</div>
-    <div>@Html.Label("Password")</div>
-    <div>@Html.TextBox("password")</div>
-    <input type="submit" value="login"/>
-}
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-3 col-md-10" style="padding-left: 40px;">
+                                <input type="submit" value="Login" class="btn btn-info" style="width: 35%;" />
+                            </div>
+                        </div>
+                    }
+                </section>
+            </div>
+        </div>
+    </div>
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
+
+
