Team page and Safety button

--- a/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
+++ b/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
@@ -107,12 +107,12 @@
         <!-- Third Member's Profile -->
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/Derek.png" alt="Thumbnail_img">
                 <div class="caption text-center">
                     <h4>Derek Maguire</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Derek">Learn More</div>
-                    <div id="Derek" class="collapse">More Info About Derek</div>
+                    <div id="Derek" class="collapse">Derek Maguire is a senior at Ferris State University. Derek majors in Computer Information Systems. He currently works as an IT Administrator in Grand Rapids but would like to use his degree to move into software development.</div>
                 </div>
             </div>
         </div>
