--- a/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-12">
 
-            <img src="~/Content/Images/ferris.png" class="img-responsive" style="width:100%;max-height:330px;" />
+            <img src="~/Content/Images/quiz.jpg" class="img-responsive" style="width:100%;max-height:330px;" />
 
         </div>
     </div>
